--- a/README.rdoc
+++ b/README.rdoc
@@ -39,6 +39,6 @@ Look at a manuscript's categories:
   manuscript.primary_category.description   # => "Physics - Instrumentation and Methods for Astrophysics"
 
 == License
-Timber is an open source project built by {Scholastica}[https://scholasticahq.com] under the {MIT-LICENSE}[https://github.com/scholastica/timber/blob/master/MIT-LICENSE].
+This is an open source project built by {Scholastica}[https://scholasticahq.com] under the {MIT-LICENSE}[https://github.com/scholastica/timber/blob/master/MIT-LICENSE].
 
 http://docs.scholastica.s3.amazonaws.com/github_scholastica_footer_logo.png
